--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+ <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
+  <!--  <script src="https://unpkg.com/website-carbon-badges@1.1.2/b.min.js" defer></script> -->
+  
 </head>
 <body>
   <app-root></app-root>
